--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
+    "react-phone-number-input": "^2.3.0",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.3"
   },
