--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-materialize": "^2.6.0",
     "react-phone-number-input": "^2.3.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
