--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-spinkit": "^3.0.0"
+    "react-spinkit": "^3.0.0",
+    "react-vis": "^1.11.5"
   },
   "scripts": {
     "start": "react-scripts start",
