--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jest": "^23.6.0",
     "lune": "^0.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -12,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-spinkit": "^3.0.0",
+    "react-test-renderer": "^16.7.0",
     "react-vis": "^1.11.5"
   },
   "scripts": {
