--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.10",
     "react-spinkit": "^3.0.0",
+    "react-springy-parallax": "^1.3.0",
     "react-test-renderer": "^16.7.0",
     "react-vis": "^1.11.5"
   },
