--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "dotenv": "^6.2.0",
     "jest": "^23.6.0",
     "lune": "^0.4.0",
     "react": "^16.7.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
     "react-phone-number-input": "^2.3.0",
