flooding alert modal working and media queries started

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_KEY=1d577a6cf480a1d51c10dce5e2d4d865
-REACT_APP_WEATHER_KEY=374aebc81ab8f72a5d804b246e8f739f
+REACT_APP_API_KEY="1d577a6cf480a1d51c10dce5e2d4d865"
+REACT_APP_WEATHER_KEY="374aebc81ab8f72a5d804b246e8f739f"
