--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
     "react-phone-number-input": "^2.3.0",
+    "react-responsive": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
