--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.2.1",
     "dotenv": "^6.2.0",
@@ -11,6 +12,7 @@
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0",
     "react-materialize": "^2.6.0",
     "react-phone-number-input": "^2.3.0",
     "react-responsive": "^6.0.1",
@@ -23,7 +25,8 @@
     "react-springy-parallax": "^1.3.0",
     "react-test-renderer": "^16.7.0",
     "react-vis": "^1.11.5",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "weather-icons-react": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
