--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.2.1",
     "dotenv": "^6.2.0",
+    "i": "^0.3.6",
     "jest": "^23.6.0",
     "lune": "^0.4.0",
+    "npm": "^6.7.0",
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.7.0",
+    "react-draggable": "^3.1.1",
     "react-icons": "^3.3.0",
     "react-materialize": "^2.6.0",
     "react-phone-number-input": "^2.3.0",
@@ -24,6 +29,7 @@
     "react-spring": "^7.2.10",
     "react-springy-parallax": "^1.3.0",
     "react-test-renderer": "^16.7.0",
+    "react-typist": "^2.0.5",
     "react-vis": "^1.11.5",
     "reactstrap": "^7.1.0",
     "weather-icons-react": "^1.2.0"
