--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_KEY="1d577a6cf480a1d51c10dce5e2d4d865"
 REACT_APP_WEATHER_KEY="374aebc81ab8f72a5d804b246e8f739f"
 REACT_APP_API_URL="https://slr-maine.herokuapp.com"
-REACT_APP_DEV_API_URL="http://localhost:3003"
+REACT_APP_API_DEV_URL="http://localhost:3003"
