--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.2.1",
+    "d3-shape": "^1.3.3",
     "dotenv": "^6.2.0",
     "i": "^0.3.6",
     "jest": "^23.6.0",
