--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.2.1",
     "d3-shape": "^1.3.3",
     "dotenv": "^6.2.0",
+    "faker": "^4.1.0",
     "i": "^0.3.6",
     "jest": "^23.6.0",
     "lune": "^0.4.0",
@@ -34,6 +35,8 @@
     "react-typist": "^2.0.5",
     "react-vis": "^1.11.5",
     "reactstrap": "^7.1.0",
+    "stream-chat": "^0.13.3",
+    "stream-chat-react": "^0.6.4",
     "weather-icons-react": "^1.2.0"
   },
   "scripts": {
